@@ -30,9 +30,29 @@ import java.util.function.UnaryOperator;
 import org.jdbi.v3.core.config.ConfigRegistry;
 import org.jdbi.v3.core.generic.GenericType;
 import org.jdbi.v3.core.generic.GenericTypes;
+import org.jdbi.v3.core.result.ResultBearing;
 import org.jdbi.v3.core.statement.StatementContext;
 import org.jdbi.v3.meta.Beta;
 
+/**
+ * Factory for a RowMapper that can map resultset rows to column name/generic value {@link Map}s.
+ *
+ * Each row in the resultset becomes a distinct {@link Map}, in which the keys are all distinct column names and the values are the corresponding cell contents.
+ * All values are mapped to the same generic type {@code T} (e.g. {@link java.math.BigDecimal}) by a {@link ColumnMapper} from the {@link ConfigRegistry}.
+ *
+ * This differs from {@link MapMapper} by supporting a concrete type instead of only {@link Object}, and from {@code collecting} into a {@link Map}
+ * in that the latter maps an entire resultset to a single {@link Map} and can only keep 1 key and 1 value from each row.
+ *
+ * Use cases for this are mainly single-row results like numeric reports (e.g. the price components,
+ * taxes, etc of a product for sale, or a set of possible labeled values for a user setting), and matrices.
+ *
+ * @see ResultBearing#mapToMap(GenericType)
+ *
+ * @see MapMapper
+ * @see ResultBearing#mapToMap()
+ *
+ * @see ResultBearing#collectInto(GenericType)
+ */
 @Beta
 // TODO jdbi4: integrate with MapMapper? check if registering by default is compatible with other Map-mapping features
 public class GenericMapMapperFactory implements RowMapperFactory {
@@ -52,7 +72,7 @@ public class GenericMapMapperFactory implements RowMapperFactory {
 
     // invoked manually or by fluent api
     @Beta
-    public static <T> GenericMapMapper<T> getMapperForValueType(Class<T> valueType, ConfigRegistry config) {
+    public static <T> RowMapper<Map<String, T>> getMapperForValueType(Class<T> valueType, ConfigRegistry config) {
         return config.get(ColumnMappers.class)
             .findFor(valueType)
             .map(GenericMapMapper::new)
@@ -61,7 +81,7 @@ public class GenericMapMapperFactory implements RowMapperFactory {
 
     // invoked manually or by fluent api
     @Beta
-    public static <T> GenericMapMapper<T> getMapperForValueType(GenericType<T> valueType, ConfigRegistry config) {
+    public static <T> RowMapper<Map<String, T>> getMapperForValueType(GenericType<T> valueType, ConfigRegistry config) {
         return config.get(ColumnMappers.class)
             .findFor(valueType)
             .map(GenericMapMapper::new)
